add npm keywords

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "react-life-hooks",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "keywords": [
+    "react",
+    "lifecycle",
+    "hook",
+    "listen",
+    "middleware"
+  ],
   "description": "Add hooks for life cycles of all react components in your app easily.",
   "main": "lib/index.js",
   "repository": "https://github.com/EnixCoda/ReactLifeHook",
