--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-life-hooks",
-  "version": "0.1.1",
+  "name": "react-life-hook",
+  "version": "0.1.0",
   "keywords": [
     "react",
     "lifecycle",
