--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "EnixCoda",
   "license": "MIT",
   "scripts": {
-    "build": "rollup src/index.js --file lib/index.js --format umd --name \"react-life-hook\""
+    "build": "rollup src/index.js --file lib/index.js --format umd --name \"react-life-hook\"",
+    "prepublish": "npm run build"
   },
   "peerDependencies": {
     "react": "^16.0.0"
