--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "EnixCoda",
   "license": "MIT",
   "scripts": {
-    "build": "rollup src/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
+    "build": "tsc && rollup src/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
     "prepublish": "npm run build"
   },
   "peerDependencies": {
     "react": "^16.0.0"
   },
   "devDependencies": {
+    "@types/react": "^16.4.18",
+    "typescript": "^3.1.3",
     "rollup": "^0.65.0"
   },
   "dependencies": {
