--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   "author": "EnixCoda",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && rollup src/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
+    "build": "tsc && rollup lib/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
     "prepublish": "npm run build"
-  },
-  "peerDependencies": {
-    "react": "^16.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
-    "typescript": "^3.1.3",
-    "rollup": "^0.65.0"
+    "@types/react-test-renderer": "^16.0.3",
+    "react": "^16.6.0",
+    "react-test-renderer": "^16.6.0",
+    "rollup": "^0.65.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.3"
   },
   "dependencies": {
     "compare-versions": "^3.4.0"
