--- a/package.json
+++ b/package.json
@@ -1,35 +1,13 @@
 {
-  "name": "react-lifecycle-hooks",
-  "version": "0.2.4",
-  "keywords": [
-    "react",
-    "lifecycle",
-    "hook",
-    "listen",
-    "middleware"
-  ],
-  "description": "Add hooks for lifecycles of all react components in your app easily.",
-  "main": "lib/index.js",
-  "repository": "https://github.com/EnixCoda/ReactLifecycleHooks",
-  "author": "EnixCoda",
+  "name": "react-lifecycle-hooks-pack",
+  "version": "0.1.0",
+  "repository": "git@github.com:EnixCoda/ReactLifecycleHooks.git",
+  "author": "EnixCoda <enixcoda@gmail.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "build": "tsc && rollup lib/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
-    "prepublish": "npm run build"
   },
-  "files": [
-    "lib"
-  ],
-  "devDependencies": {
-    "@types/react": "^16.4.18",
-    "@types/react-test-renderer": "^16.0.3",
-    "react": "^16.6.0",
-    "react-test-renderer": "^16.6.0",
-    "rollup": "^0.65.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
-  },
-  "dependencies": {
-    "compare-versions": "^3.4.0"
-  }
+  "workspaces": [
+    "react-lifecycle-hooks",
+  ]
 }
