--- a/react-lifecycle-hooks/package.json
+++ b/react-lifecycle-hooks/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc && rollup lib/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
-    "prepublish": "npm run build"
+    "prepublish": "cp ../readme.md ./ && npm run build"
   },
   "files": [
     "lib"
