--- a/react-lifecycle-hooks/package.json
+++ b/react-lifecycle-hooks/package.json
@@ -21,6 +21,7 @@
     "lib"
   ],
   "devDependencies": {
+    "@types/node": "^10.12.3",
     "@types/react": "^16.4.18",
     "rollup": "^0.65.0",
     "typescript": "^3.1.3"
