--- a/react-lifecycle-hooks/tsconfig.json
+++ b/react-lifecycle-hooks/tsconfig.json
@@ -1,16 +1,13 @@
 {
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "target": "es2015",
-    "lib": [
-      "es2015"
-    ],
+    "lib": ["es2015"],
     "jsx": "react",
     "rootDir": "src",
     "outDir": "lib",
     "moduleResolution": "node",
+    "module": "commonjs",
     "declaration": true,
     "sourceMap": true
   }
