--- a/react-lifecycle-hooks/package.json
+++ b/react-lifecycle-hooks/package.json
@@ -14,7 +14,7 @@
   "author": "EnixCoda",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && rollup lib/index.js --file lib/index.js --format umd --name \"react-lifecycle-hooks\"",
+    "build": "tsc",
     "prepublish": "cp ../readme.md ./ && npm run build"
   },
   "files": [
@@ -23,8 +23,7 @@
   "devDependencies": {
     "@types/node": "^10.12.3",
     "@types/react": "^16.4.18",
-    "rollup": "^0.65.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.3.4000"
   },
   "dependencies": {
     "compare-versions": "^3.4.0"
